...
    List<TextInputFormatter>? inputFormatters,
  }) {
    return TextFormField(
      controller: controller,
      keyboardType: keyboardType,
      validator: (value) {
        if (value!.isEmpty) return 'هذا الحقل مطلوب';
        final arabicNameRegex = RegExp(r'^[\u0600-\u06FF\s]+$');
        final hasNumbers = RegExp(r'[0-9\u0660-\u0669]').hasMatch(value);
        if (hasNumbers) return 'الاسم لا يمكن أن يحتوي على أرقام';
        if (!arabicNameRegex.hasMatch(value)) return 'الرجاء إدخال الاسم بالحروف العربية فقط';
        if (value.trim().isEmpty) return 'الاسم لا يمكن أن يكون فارغًا أو يحتوي على مسافات فقط';
        return null;
...
                          ],
                        ),
                        const SizedBox(height: 15),
                        // Gender dropdown
                        _buildDropdownField(
                          hintText: 'الجنس',
                          items: ['ذكر', 'أنثى']
                              .map((item) => DropdownMenuItem(
                                    value: item,
                                    child: Text(item, style: const TextStyle(fontFamily: 'alfont', color: Colors.black)),
                                  ))
                              .toList(),
                          value: _selectedGender,
...
                          onChanged: (value) => setState(() => _selectedAge = value),
                          validator: (value) => value == null ? 'هذا الحقل مطلوب' : null,
                        ),
                        const SizedBox(height: 30),
                        // Submit button
                        _buildButton(
                          text: 'إضافة',
                          onPressed: _submit,
                        ),
                      ],
                    ),
                  ),
                ),
...
